[package]
name = "fused-chain"
version = "0.1.0"
authors = ["Philipp Rehner <rehner@itt.uni-stuttgart.de>"]
edition = "2018"

[lib]
name = "fused_chain"
crate-type = ["rlib", "cdylib"]

[dependencies]
quantity = "0.3"
feos-core = { git = "https://github.com/feos-org/feos-core", branch = "main" }
eos-dft = { path = "../../../Code/eos/eos-dft" }
num-dual = "0.3"
ndarray = { version = "0.15", features = ["serde"] }
numpy = { version = "0.14", optional = true }
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }

[dependencies.pyo3]
version = "0.14"
features = ["extension-module", "abi3", "abi3-py36"]
optional = true

[features]
default = []
python = ["pyo3", "numpy", "eos-dft/python"]
openblas-system = ["feos-core/openblas-system"]
openblas-static = ["feos-core/openblas-static"]
intel-mkl-system = ["feos-core/intel-mkl-system"]
intel-mkl-static = ["feos-core/intel-mkl-static"]
netlib-system = ["feos-core/netlib-system"]
netlib-static = ["feos-core/netlib-static"]
