[package]
name = "feos-fused-chains"
version = "0.1.0"
authors = ["Philipp Rehner <prehner@ethz.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Fused-chain Helmholtz energy functional implemented in the `feos` framework."
homepage = "https://github.com/feos-org"
readme = "README.md"
repository = "https://github.com/feos-org/feos-fused-chains"

[lib]
name = "feos_fused_chains"
crate-type = ["rlib", "cdylib"]

[dependencies]
quantity = "0.4"
feos-core = "0.1"
feos-dft = "0.1"
num-dual = "0.4"
ndarray = { version = "0.15", features = ["serde"] }
numpy = { version = "0.15", optional = true }
petgraph = "0.6"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module", "abi3", "abi3-py36"]
optional = true

[features]
default = []
python = ["pyo3", "numpy", "feos-dft/python"]
